changed to retrofit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "ca.ualberta_ecocar.ecocar"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 25
         versionCode 4
         versionName "1.4"
@@ -32,8 +32,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.android.support:design:25.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.google.firebase:firebase-crash:10.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
@@ -41,11 +44,6 @@ dependencies {
 }
 
 
-
-
-
-
-apply plugin: 'com.google.gms.google-services'
 repositories {
     mavenCentral()
 }
